opam-version: "1.2"
name: "asl"
maintainer: "dave@recoil.org"
version: "0.10"
authors: [ "David Scott" ]
license: "ISC"
homepage: "https://github.com/mirage/ocaml-asl"
dev-repo: "https://github.com/mirage/ocaml-asl.git"
bug-reports: "https://github.com/mirage/ocaml-asl/issues"
doc: "https://mirage.github.io/ocaml-vmnet/"

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "result"
  "logs"
  "ocamlfind" {build}
  "dune"   {build & >= "1.0"}
]
